--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ find_package(catkin REQUIRED COMPONENTS
     sensor_msgs
 )
 find_package(gazebo REQUIRED)
+find_package(PCL 1.2 REQUIRED)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GAZEBO_CXX_FLAGS}")
 
@@ -22,6 +23,7 @@ catkin_package(
         sensor_msgs
 )
 
+include_directories(${PCL_INCLUDE_DIRS})
 include_directories(
     include)
 include_directories(
@@ -30,6 +32,8 @@ include_directories(
     ${GAZEBO_INCLUDE_DIRS}
 )
 link_directories(${GAZEBO_LIBRARY_DIRS})
+link_directories(${PCL_LIBRARY_DIRS})
+add_definitions(${PCL_DEFINITIONS})
 
 add_library(
     ${PROJECT_NAME}
@@ -37,7 +41,7 @@ add_library(
     src/gazebo_ros_realsense.cpp
     )
 
-target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${GAZEBO_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${GAZEBO_LIBRARIES} ${PCL_LIBRARIES})
 add_dependencies(${PROJECT_NAME} ${catkin_EXPORTED_TARGETS})
 
 install(
